--- a/index.html
+++ b/index.html
@@ -27,6 +27,39 @@
     <header>
       <h1>Password Check</h1>
     </header>
+    <main class="password-check-section">
+      <!-- Password field -->
+      <section class="password-field">
+        <input
+          class="first-password-input"
+          type="password"
+          name="password"
+          id="first-password-input"
+        />
+
+        <input
+          class="second-password-input"
+          type="password"
+          name="password"
+          id="second-password-input"
+        />
+      </section>
+
+      <!-- An element to toggle between password visibility -->
+      <section>
+        <button id="show-hide-button">Show Passwords</button>
+      </section>
+
+      <!-- checked content-list for the password-box -->
+      <section class="checked-content-list">
+        <p>Password are equal</p>
+        <p>Lower Case Letters</p>
+        <p>Upper Case Letters</p>
+        <p>Contains Numbers</p>
+        <p>At least 10 characters long</p>
+      </section>
+    </main>
+
     <script src="script.js"></script>
   </body>
 </html>
