refacter class name

--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
     </header>
     <main class="password-check-section">
       <!-- Password field -->
-      <section class="password-field">
+      <section class="first-password-field">
         <input
           class="first-password-input"
           type="password"
           name="password"
           id="first-password-input"
         />
-
+      </section>
+      <section class="second-password-field">
         <input
           class="second-password-input"
           type="password"
