styling password-box html plus css

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </header>
     <main class="password-check-section">
       <!-- Password field -->
-      <section id="style-password-field" class="first-password-field">
+      <section class="first-password-field">
         <input
-          class="first-password-input"
+          class="style-password-box"
           type="password"
           name="password"
           id="first-password-input"
@@ -39,7 +39,7 @@
       </section>
       <section class="second-password-field">
         <input
-          class="second-password-input"
+          class="style-password-box"
           type="password"
           name="password"
           id="second-password-input"
