create check list whit X

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h1>Password Check</h1>
     </header>
     <main>
-      <form>
+      <form id="password-input-field">
         <!-- Password field -->
         <section class="first-password-field">
           <input
@@ -56,11 +56,20 @@
       <!-- checked content-list for the password-box -->
 
       <ul class="checked-content-list">
-        <li id="equal-password">Password are equal</li>
-        <li id="lower-case">Lower Case Letters</li>
-        <li id="upper-case">Upper Case Letters</li>
-        <li id="contains-numbers">Contains Numbers</li>
-        <li id="least-ten-characters">At least 10 characters long</li>
+        <li>Password are equal</li>
+        <li id="equal-password">❌</li>
+
+        <li>Lower Case Letters</li>
+        <li id="lower-case">❌</li>
+
+        <li>Upper Case Letters</li>
+        <li id="upper-case">❌</li>
+
+        <li>Contains Numbers</li>
+        <li id="contains-numbers">❌</li>
+
+        <li>At least 10 characters long</li>
+        <li id="least-ten-characters">❌</li>
       </ul>
     </main>
 
